Finished correcting alignment errors in places

--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -4,6 +4,8 @@
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
+    display: flex;
+    flex-direction: row;
 }
 
 button {
@@ -17,9 +19,39 @@ button {
     float: right;
     margin-top: 11px;
     margin-bottom: 11px;
-    margin-right: 30px;
+    margin-left: 150px;
 }
 
 button:hover {
     opacity: 90%;
+}
+
+h3 {
+    font-weight: 600;
+    margin-bottom: 0;
+}
+
+h4 {
+    font-weight: 400;
+    font-size: 14px;
+    margin-top: 5px;
+}
+
+.locations {
+    height: 100%;
+    width: 25%;
+    font-weight: 600;
+    border-right: 1px solid #DDDDDD;
+    display: flex;
+    flex-direction: column;
+    padding-left: 60px;
+}
+
+.amenities {
+    height: 100%;
+    width: 25%;
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    padding-left: 60px;
 }
